<resources>
    <string name="app_name">MyApp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here.</string>
    <string name="enter_mail">Enter mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register_here">Register here!</string>
    <string name="title_activity_harta">Harta</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="search_destination">Search Destination</string>
    <string name="change_type">Change Map</string>
    <string name="zoomIn">^</string>
    <string name="zoomOut">v</string>
</resources>
